# wyoming-parakeet

./: Dockerfile  Dockerfile.jetson  README.md  build-jetson.sh  docker-compose.jetson.yml  docker-compose.yml  pyproject.toml
script/: run
tests/: test_parakeet.py
wyoming_parakeet/: __init__.py  __main__.py  handler.py
